// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundManagement renders audit setup with ballot audit 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page left sc-dxgOiQ hFvvYA"
  >
    <h2
      class="bp3-heading sc-htpNat fysvnw"
    >
      Round 
      1
       Audit Board Setup
    </h2>
    <div
      class="sc-gzVnrw dTrzyS"
    >
      <h4
        class="bp3-heading"
      >
        Number of Audit Boards
      </h4>
      <p>
        Select the appropriate number of audit boards based upon the personnel available and the number of ballots assigned to your jurisdiction for this round of the audit. You will have the opportunity to adjust the number of audit boards before the next round of the audit, if another round is required.
      </p>
      <div
        class="bp3-html-select sc-htoDjs hCYfMu sc-bZQynM dFcXvN"
      >
        <select
          data-testid="numAuditBoards"
          field="[object Object]"
          form="[object Object]"
          id="numAuditBoards"
        >
          <option>
            1
          </option>
          <option>
            2
          </option>
          <option>
            3
          </option>
          <option>
            4
          </option>
          <option>
            5
          </option>
          <option>
            6
          </option>
          <option>
            7
          </option>
          <option>
            8
          </option>
          <option>
            9
          </option>
          <option>
            10
          </option>
          <option>
            11
          </option>
          <option>
            12
          </option>
          <option>
            13
          </option>
          <option>
            14
          </option>
          <option>
            15
          </option>
        </select>
        <span
          class="bp3-icon bp3-icon-double-caret-vertical"
          icon="double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              double-caret-vertical
            </desc>
            <path
              d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <p
        class="sc-dnqmqq cMacxD"
      >
        40
         Ballots to Audit in Round 
        1
      </p>
      <button
        class="bp3-button sc-EHOje gmpgQN"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RoundManagement renders audit setup with batch audit 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page left sc-dxgOiQ hFvvYA"
  >
    <h2
      class="bp3-heading sc-htpNat fysvnw"
    >
      Round 
      1
       Audit Board Setup
    </h2>
    <div
      class="sc-gzVnrw dTrzyS"
    >
      <h4
        class="bp3-heading"
      >
        Number of Audit Boards
      </h4>
      <p>
        Select the appropriate number of audit boards based upon the personnel available and the number of ballots assigned to your jurisdiction for this round of the audit. You will have the opportunity to adjust the number of audit boards before the next round of the audit, if another round is required.
      </p>
      <div
        class="bp3-html-select sc-htoDjs hCYfMu sc-bZQynM dFcXvN"
      >
        <select
          data-testid="numAuditBoards"
          field="[object Object]"
          form="[object Object]"
          id="numAuditBoards"
        >
          <option>
            1
          </option>
          <option>
            2
          </option>
          <option>
            3
          </option>
          <option>
            4
          </option>
          <option>
            5
          </option>
          <option>
            6
          </option>
          <option>
            7
          </option>
          <option>
            8
          </option>
          <option>
            9
          </option>
          <option>
            10
          </option>
          <option>
            11
          </option>
          <option>
            12
          </option>
          <option>
            13
          </option>
          <option>
            14
          </option>
          <option>
            15
          </option>
        </select>
        <span
          class="bp3-icon bp3-icon-double-caret-vertical"
          icon="double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              double-caret-vertical
            </desc>
            <path
              d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <p
        class="sc-dnqmqq cMacxD"
      >
        40
         Ballots to Audit in Round 
        1
      </p>
      <button
        class="bp3-button sc-EHOje gmpgQN"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RoundManagement renders complete view 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page sc-dxgOiQ hFvvYA"
  >
    <h2
      class="bp3-heading sc-htpNat fysvnw"
    >
      Congratulations! Your Risk-Limiting Audit is now complete.
    </h2>
  </div>
</div>
`;

exports[`RoundManagement renders links & data entry with batch audit 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page left sc-dxgOiQ hFvvYA"
  >
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Aggregated
         
        Batch
         Retrieval List for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Placeholder Sheets for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Ballot Labels for Round 
        1
      </span>
    </button>
    <form>
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Round 
        1
         Data Entry
      </h2>
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
      </p>
      <div
        class="bp3-card bp3-elevation-2 sc-VigVT bXvjOC"
      >
        <h5
          class="bp3-heading"
        >
          Batch: Batch One, Contest: Contest 1
        </h5>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-1][choice-id-1]"
        >
          Votes for 
          Choice One
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-1][choice-id-1]"
                name="results[batch-1][choice-id-1]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-1][choice-id-2]"
        >
          Votes for 
          Choice Two
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-1][choice-id-2]"
                name="results[batch-1][choice-id-2]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="bp3-card bp3-elevation-2 sc-VigVT bXvjOC"
      >
        <h5
          class="bp3-heading"
        >
          Batch: Batch Two, Contest: Contest 1
        </h5>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-2][choice-id-1]"
        >
          Votes for 
          Choice One
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-2][choice-id-1]"
                name="results[batch-2][choice-id-1]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-2][choice-id-2]"
        >
          Votes for 
          Choice Two
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-2][choice-id-2]"
                name="results[batch-2][choice-id-2]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="bp3-card bp3-elevation-2 sc-VigVT bXvjOC"
      >
        <h5
          class="bp3-heading"
        >
          Batch: Batch Three, Contest: Contest 1
        </h5>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-3][choice-id-1]"
        >
          Votes for 
          Choice One
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-3][choice-id-1]"
                name="results[batch-3][choice-id-1]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
        <label
          class="sc-kpOJdX fZDKze"
          for="results[batch-3][choice-id-2]"
        >
          Votes for 
          Choice Two
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[batch-3][choice-id-2]"
                name="results[batch-3][choice-id-2]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <button
        class="bp3-button bp3-intent-primary sc-kGXeez fuuyeD sc-EHOje gmpgQN"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Submit Data for Round 1
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`RoundManagement renders links & data entry with offline ballot audit 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page left sc-dxgOiQ hFvvYA"
  >
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Aggregated
         
        Ballot
         Retrieval List for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Placeholder Sheets for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Ballot Labels for Round 
        1
      </span>
    </button>
    <form>
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Round 
        1
         Data Entry
      </h2>
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
      </p>
      <div
        class="bp3-card bp3-elevation-2 sc-VigVT bXvjOC"
      >
        <h5
          class="bp3-heading"
        >
          Contest 1
        </h5>
        <label
          class="sc-kgoBCf hiauKL"
          for="results[contest-id-1][choice-id-1]"
        >
          Votes for 
          Choice One
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[contest-id-1][choice-id-1]"
                name="results[contest-id-1][choice-id-1]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
        <label
          class="sc-kgoBCf hiauKL"
          for="results[contest-id-1][choice-id-2]"
        >
          Votes for 
          Choice Two
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[contest-id-1][choice-id-2]"
                name="results[contest-id-1][choice-id-2]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="bp3-card bp3-elevation-2 sc-VigVT bXvjOC"
      >
        <h5
          class="bp3-heading"
        >
          Contest 2
        </h5>
        <label
          class="sc-kgoBCf hiauKL"
          for="results[contest-id-2][choice-id-3]"
        >
          Votes for 
          Choice Three
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[contest-id-2][choice-id-3]"
                name="results[contest-id-2][choice-id-3]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
        <label
          class="sc-kgoBCf hiauKL"
          for="results[contest-id-2][choice-id-4]"
        >
          Votes for 
          Choice Four
          :
          <div
            class="sc-jTzLTM gTHUJn"
          >
            <div
              class="bp3-input-group sc-fjdhpX dmEgAR"
            >
              <input
                class="bp3-input"
                id="results[contest-id-2][choice-id-4]"
                name="results[contest-id-2][choice-id-4]"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <button
        class="bp3-button bp3-intent-primary sc-chPdSV ikUOhS sc-EHOje gmpgQN"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Submit Data for Round 1
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`RoundManagement renders links & progress with online ballot audit 1`] = `
<div>
  <div
    class="sc-bdVaJa single-page left sc-dxgOiQ hFvvYA"
  >
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Aggregated
         
        Ballot
         Retrieval List for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Placeholder Sheets for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Ballot Labels for Round 
        1
      </span>
    </button>
    <button
      class="bp3-button sc-ifAKCX kKfkZO"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Download Audit Board Credentials for Data Entry
      </span>
    </button>
    <div
      class="sc-gqjmRU bfUpFK"
      id="qr-root"
    >
      <span
        id="qr-happy-rebel-base"
      >
        <canvas
          height="200"
          style="height: 200px; width: 200px;"
          width="200"
        />
      </span>
    </div>
    <h2
      class="bp3-heading sc-htpNat fysvnw"
    >
      Round 
      1
       Progress
    </h2>
    <div
      class="sc-iwsKbI fpOYtu"
    >
      <span>
        0
         of 
        30
         ballots audited
         
      </span>
      <div
        class="bp3-progress-bar bp3-intent-primary"
      >
        <div
          class="bp3-progress-meter"
          style="width: 0%;"
        />
      </div>
    </div>
    <div
      class="sc-gZMcBi dmwxst"
    >
      <span>
        Audit Board #01: 0 of 30 ballots audited 
      </span>
      <div
        class="bp3-progress-bar bp3-intent-primary"
      >
        <div
          class="bp3-progress-meter"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RoundManagement renders null when still loading 1`] = `
<div>
  <p>
    Loading... 
    <span
      class="bp3-spinner"
    >
      <span
        class="bp3-spinner-animation"
      >
        <svg
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
          width="20"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </span>
    </span>
  </p>
</div>
`;
